--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -7,6 +7,7 @@ project (emilpro-server)
 
 set (CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}
                         ${CMAKE_CURRENT_SOURCE_DIR}/../cmake)
+set (BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
 # Dependencies
 include (${CMAKE_CURRENT_SOURCE_DIR}/../cmake/BuildBinutils.cmake)
@@ -44,6 +45,7 @@ add_executable (file-to-source
 	../src/utils.cc
 	../tools/file-to-source.cc
 )
+
 
 set (BASE_SRCS
 	../src/addresshistory.cc
