--- a/tests/unit-tests/CMakeLists.txt
+++ b/tests/unit-tests/CMakeLists.txt
@@ -11,6 +11,8 @@ enable_language(ASM)
 # Dependencies
 set (CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}
                         ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake)
+set (BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../)
+
 
 find_package (LibElf REQUIRED)
 find_package (LibGeoIP REQUIRED)
