qt gui: Add handling of high-level soure code (partially)

--- a/src/qt/CMakeLists.txt
+++ b/src/qt/CMakeLists.txt
@@ -79,6 +79,7 @@ set (BASE_SRCS
 	../preferences.cc
 	../server-connection.cc
 	../symbolfactory.cc
+	../ui-helpers.cc
 	../utils.cc
 	../xmlfactory.cc
 	../xmlstring.cc
