qt gui: Fix build on Fedora (temporarily anyway)

--- a/src/qt/CMakeLists.txt
+++ b/src/qt/CMakeLists.txt
@@ -31,6 +31,7 @@ pkg_check_modules(LIBXMLPP libxml++-2.6)
 pkg_check_modules(LIBCURL libcurl)
 
 set (CMAKE_CXX_FLAGS "-std=c++0x -Wall -D_GLIBCXX_USE_NANOSLEEP -DPACKAGE=emilpro -DPACKAGE_VERSION=1 ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
+LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/install-binutils/lib ${CMAKE_BINARY_DIR}/install-binutils/lib64)
 
 set (CMAKE_BUILD_TYPE debug)
 set(CMAKE_AUTOMOC ON)
@@ -123,9 +124,9 @@ set_property(TARGET tools/squash-instruction-models APPEND PROPERTY OBJECT_DEPEN
 
 set (BASE_LIBS
 	${LIBELF_LIBRARIES}
-	${CMAKE_BINARY_DIR}/install-binutils/lib/libopcodes.a
-	${CMAKE_BINARY_DIR}/install-binutils/lib/libbfd.a
-	${CMAKE_BINARY_DIR}/install-binutils/lib/libiberty.a
+	opcodes.a
+	bfd.a
+	iberty.a
 	${LIBXMLPP_LIBRARIES}
 	${LIBCURL_LIBRARIES}
 	z
