qt gui: Implement the jump-target display (partially)

--- a/src/qt/CMakeLists.txt
+++ b/src/qt/CMakeLists.txt
@@ -88,6 +88,7 @@ set (BASE_SRCS
 
 set (GUI_SRCS
 	emilpro/highlighter.cpp
+	emilpro/jumpdisplay-delegate.cpp
 	emilpro/main.cpp
 	emilpro/mainwindow.cpp
 	)
