build: Mark PkgConfig packages (libxml++ etc) as required

--- a/src/qt/CMakeLists.txt
+++ b/src/qt/CMakeLists.txt
@@ -27,8 +27,8 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set (CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}
                         ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
-pkg_check_modules(LIBXMLPP libxml++-2.6)
-pkg_check_modules(LIBCURL libcurl)
+pkg_check_modules(LIBXMLPP REQUIRED libxml++-2.6)
+pkg_check_modules(LIBCURL REQUIRED libcurl)
 
 set (CMAKE_CXX_FLAGS "-std=c++0x -Wall -D_GLIBCXX_USE_NANOSLEEP -DPACKAGE=emilpro -DPACKAGE_VERSION=1 ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/install-binutils/lib ${CMAKE_BINARY_DIR}/install-binutils/lib64)
