travis: Correct makeinfo package (texi2html)

--- a/travis/Makefile
+++ b/travis/Makefile
@@ -1,6 +1,6 @@
 #!/usr/bin/make
 
-emilpro_deps=libdw-dev libelf-dev elfutils libcurl4-openssl-dev libxml++2.6-dev libgtkmm-3.0-dev libgtksourceviewmm-3.0-dev libqt4-dev python3 cmake makeinfo
+emilpro_deps=libdw-dev libelf-dev elfutils libcurl4-openssl-dev libxml++2.6-dev libgtkmm-3.0-dev libgtksourceviewmm-3.0-dev libqt4-dev python3 cmake texi2html
 
 .PHONY: prepare_environment
 
