--- a/travis/Makefile
+++ b/travis/Makefile
@@ -12,6 +12,7 @@ build:
 prepare_linux:
 	sudo apt-get update -y
 	sudo apt-get install -y ${emilpro_deps} gcc-multilib debootstrap git time
+	cd /tmp && wget https://github.com/aquynh/capstone/archive/3.0.4.tar.gz && tar -xf capstone-3.0.4.tar.gz && cd capstone-3.0.4 && cmake . && make && sudo make install
 	sudo pip install robotframework
 
 prepare_environment: prepare_linux
