Issue #44: travis: Build Qt port as well

--- a/travis/Makefile
+++ b/travis/Makefile
@@ -1,13 +1,20 @@
 #!/usr/bin/make
 
-emilpro_deps=libdw-dev libelf-dev elfutils libcurl4-openssl-dev libxml++2.6-dev libgtkmm-3.0-dev libgtksourceviewmm-3.0-dev libqt4-dev python3 cmake texi2html texinfo
+emilpro_deps=libdw-dev libelf-dev elfutils libcurl4-openssl-dev libxml++2.6-dev libgtkmm-3.0-dev libgtksourceviewmm-3.0-dev qtcreator python3 cmake texi2html texinfo
 
 .PHONY: prepare_environment
 
-build:
-	mkdir -p build build-tests build-tools
+build_gtk:
+	mkdir -p build
 	cd build && cmake ..
 	make -C build
+
+build_qt:
+	mkdir -p build_qt
+	cd build_qt && cmake ../src/qt/
+	make -C build_qt
+
+build: build_gtk build_qt
 
 prepare_linux:
 	sudo apt-get update -y
