Issue #49: build: Correct dependencies on binutils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,8 +143,8 @@ add_executable (tools/squash-instruction-models
 	tools/squash-instruction-models.cc
 	)
 
-set_property(TARGET emilpro APPEND PROPERTY OBJECT_DEPENDS binutils)
-set_property(TARGET tools/squash-instruction-models APPEND PROPERTY OBJECT_DEPENDS binutils)
+add_dependencies(emilpro binutils)
+add_dependencies(tools/squash-instruction-models binutils)
 
 set (BASE_LIBS
 	${LIBELF_LIBRARIES}
