modify cmake and add flatpak.json

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ set (CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}
 
 pkg_check_modules(GTKMM REQUIRED gtkmm-3.0)
 pkg_check_modules(GTKSOURCEVIEWMM REQUIRED gtksourceviewmm-3.0)
-pkg_check_modules(LIBXMLPP REQUIRED libxml++-2.6)
+pkg_check_modules(LIBXMLPP REQUIRED libxml++-3.0)
 pkg_check_modules(LIBCURL REQUIRED libcurl)
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall -D_GLIBCXX_USE_NANOSLEEP -DPACKAGE=emilpro -DPACKAGE_VERSION=1 -pthread")
@@ -168,3 +168,5 @@ target_link_libraries(emilpro
 target_link_libraries(tools/squash-instruction-models
 	${BASE_LIBS}
 	)
+
+install(TARGETS emilpro RUNTIME DESTINATION bin)
