binary_parser: Rename to bfd_binary_parser, which it is

--- a/src/binary_parser/CMakeLists.txt
+++ b/src/binary_parser/CMakeLists.txt
@@ -1,17 +1,11 @@
-add_library(elf_binary_parser EXCLUDE_FROM_ALL
-    elf_binary_parser.cc
+add_library(bfd_binary_parser EXCLUDE_FROM_ALL
+    bfd_binary_parser.cc
 )
 
-target_link_libraries(elf_binary_parser
+target_link_libraries(bfd_binary_parser
 PUBLIC
     emilpro_interface
     p::bfd
-    /usr/local/opt/binutils/lib/libctf.a
-    /usr/local/opt/binutils/lib/libopcodes.a
-    /usr/local/opt/binutils/lib/libiberty.a
-    /usr/local/opt/binutils/lib/libsframe.a
-    -lz
-    /usr/local/opt/zstd/lib/libzstd.a
     fmt::fmt
 PRIVATE
     section
@@ -24,5 +18,5 @@ add_library(binary_parser_factory EXCLUDE_FROM_ALL
 
 target_link_libraries(binary_parser_factory
 PRIVATE
-    elf_binary_parser
+    bfd_binary_parser
 )
