--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(binary_parser)
+add_subdirectory(database)
 add_subdirectory(disassembly)
 add_subdirectory(section)
 add_subdirectory(symbol)
