--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-#add_compile_options(-fsanitize=address,undefined -g)
-#add_link_options(-fsanitize=address,undefined -g)
+add_compile_options(-fsanitize=address,undefined -g)
+add_link_options(-fsanitize=address,undefined -g)
 
 list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
