jump_lanes: Some preparatory work

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(binary_parser)
 add_subdirectory(database)
 add_subdirectory(disassembly)
+add_subdirectory(jump_lanes)
 add_subdirectory(section)
 add_subdirectory(symbol)
