qt: Re-add the jump lane delegate (forard only, for now)

--- a/qt/emilpro/CMakeLists.txt
+++ b/qt/emilpro/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_library(mainwindow EXCLUDE_FROM_ALL
     highlighter.cc
+    jump_lane_delegate.cc
     mainwindow.ui
     mainwindow.cc
 )
@@ -20,4 +21,5 @@ target_link_libraries(emilpro
     mainwindow
     binary_parser_factory
     capstone_disassembler
+    jump_lanes
 )
