build: Install libiberty via conan since MacOS Homebrew does not include it with binutils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ find_package(fmt REQUIRED)
 find_package(trompeloeil REQUIRED)
 find_package(doctest REQUIRED)
 find_package(capstone REQUIRED)
+find_package(libiberty REQUIRED)
 find_package(etl REQUIRED)
 find_package(bfd REQUIRED)
 find_package(Qt6 REQUIRED COMPONENTS Widgets Network)
