address_history: Initial (unittest) implementation of address history

--- a/test/unittest/CMakeLists.txt
+++ b/test/unittest/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_executable(ut
+    test_address_history.cc
     test_database.cc
     test_lanes.cc
     main.cc
@@ -7,6 +8,7 @@ add_executable(ut
 target_link_libraries(ut
     trompeloeil::trompeloeil
     doctest::doctest
+    address_history
     database
     jump_lanes
     fmt::fmt
