build: Build unittests+ASAN only with debug builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,14 +9,15 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-add_compile_options(-fsanitize=address,undefined -g)
-add_link_options(-fsanitize=address,undefined -g)
+# Enable sanitizers in debug builds
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    add_compile_options(-fsanitize=address,undefined -g)
+    add_link_options(-fsanitize=address,undefined -g)
+endif()
 
 list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 find_package(fmt REQUIRED)
-find_package(trompeloeil REQUIRED)
-find_package(doctest REQUIRED)
 find_package(capstone REQUIRED)
 find_package(libiberty REQUIRED)
 find_package(etl REQUIRED)
@@ -26,7 +27,11 @@ find_package(Qt6 REQUIRED COMPONENTS Widgets Network)
 add_subdirectory(src)
 add_subdirectory(qt)
 add_subdirectory(tools)
-add_subdirectory(test)
+
+# Unit tests are only built in debug mode
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    add_subdirectory(test)
+endif()
 
 add_library(emilpro_interface INTERFACE)
 target_include_directories(emilpro_interface INTERFACE include)
