build: Separate apple linker options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,14 @@ set(CMAKE_AUTOUIC ON)
 
 
 # Ignore some irritating warnings on MacOS
-add_link_options(-Wl,-no_warn_duplicate_libraries)
+if (APPLE)
+    add_link_options(-Wl,-no_warn_duplicate_libraries)
+    # https://stackoverflow.com/questions/4929255/building-static-libraries-on-mac-using-cmake-and-gcc
+    set(CMAKE_C_ARCHIVE_CREATE   "<CMAKE_AR> Scr <TARGET> <LINK_FLAGS> <OBJECTS>")
+    set(CMAKE_CXX_ARCHIVE_CREATE "<CMAKE_AR> Scr <TARGET> <LINK_FLAGS> <OBJECTS>")
+    set(CMAKE_C_ARCHIVE_FINISH   "<CMAKE_RANLIB> -no_warning_for_no_symbols -c <TARGET>")
+    set(CMAKE_CXX_ARCHIVE_FINISH "<CMAKE_RANLIB> -no_warning_for_no_symbols -c <TARGET>")
+endif()
 
 # Enable sanitizers in debug builds
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
